# mosqlimate-assistant

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  code_example.md  documentacao_formatada.md  mosqlimate_docs_cache.sqlite  pyproject.toml  t.ipynb  t.md  t.py
.github/workflows/: main.yaml  release.yaml  release.yml
data/: asks.csv  municipios.csv  municipios.json
data/asks_db/: index.faiss  index.pkl
data/docs_db/: index.faiss  index.pkl
examples/: assistant_report.ipynb  main_pipeline.ipynb  ollama_testing.ipynb  pipeline_example.ipynb  steps_pipeline.ipynb
mosqlimate_assistant/: __init__.py  agent.py  agent_cards.py  agents.py  api_consumer.py  assistant.py  assistant_ollama.py  chroma_db.py  coder_consumer.py  configs.py  docs_consumer.py  document_consumer.py  embeddings.py  faiss_db.py  filters.py  func_tools.py  input_validator.py  knowledge_base.py  main.py  models.py  monitoring.py  muni_codes.py  prompts.py  providers.py  schemas.py  settings.py  utils.py  vector_db.py  vector_store.py  web_cache.py
mosqlimate_assistant/data/: code_references.csv  docs_en_references.csv  docs_references.csv  imdc_references.csv  keywords_map.csv
mosqlimate_assistant/data/asks_db/: index.faiss  index.pkl  vector_store.pkl
mosqlimate_assistant/data/docs_db/: index.faiss  index.pkl  vector_store.pkl
mosqlimate_assistant/data/vector_dbs/asks_chroma/: chroma.sqlite3
mosqlimate_assistant/data/vector_dbs/docs_chroma/: chroma.sqlite3
mosqlimate_assistant/prompts/: __init__.py  eng.py  por.py
tests/: __init__.py  test_agent_cards.py  test_agent_executor.py  test_api_consumer.py  test_catalog_and_data.py  test_chunking.py  test_data.py  test_docs_consumer.py  test_embeddings.py  test_faiss_db.py  test_func_tools.py  test_knowledge_base.py  test_levenshtein.py  test_models.py  test_monitoring.py  test_muni_codes.py  test_pipeline_components.py  test_prompts.py  test_runtime_entrypoints.py  test_schemas.py  test_settings.py  test_single_agent.py  test_vector_store.py
