[project]
name = "mosqlimate-assistant"
version = "1.2.2"  # changed by semantic-release
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "epiweeks>=2.3.0",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-ollama>=0.2.3",
    "mosqlient>=1.7.3",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.9.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["mosqlimate_assistant", "mosqlimate_assistant.prompts"]
include-package-data = true

[tool.poetry]
include = [
    "mosqlimate_assistant/data/asks.csv",
    "mosqlimate_assistant/data/municipios.json",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.isort]
profile = "black"
