[project]
name = "mosqlimate-assistant"
version = "1.8.0"  # changed by semantic-release
description = "Mosqlimate AI Assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "google-genai>=1.0.0",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "requests-cache>=1.3.0",
    "types-requests>=2.31.0",
]

[tool.setuptools]
packages = ["mosqlimate_assistant"]
include-package-data = true

[tool.poetry]
include = [
    "mosqlimate_assistant/data/docs_reference.csv",
    "mosqlimate_assistant/data/code_references.csv",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250527",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.isort]
profile = "black"
